# AI-Meta-Orchestrator

./: .gitignore  BACKLOG.md  README.md  pyproject.toml
src/ai_meta_orchestrator/: __init__.py  main.py
src/ai_meta_orchestrator/adapters/: __init__.py
src/ai_meta_orchestrator/adapters/credentials/: __init__.py  credential_adapter.py
src/ai_meta_orchestrator/adapters/external_cli/: __init__.py  cli_adapters.py  cli_agents.py
src/ai_meta_orchestrator/adapters/git_cicd/: __init__.py  git_cicd_adapter.py
src/ai_meta_orchestrator/adapters/internal_agents/: __init__.py  crewai_agent.py
src/ai_meta_orchestrator/adapters/observability/: __init__.py  observability_adapter.py
src/ai_meta_orchestrator/adapters/persistence/: __init__.py  persistence_adapter.py
src/ai_meta_orchestrator/adapters/templates/: __init__.py  builtin_templates.py
src/ai_meta_orchestrator/api/: __init__.py  app.py  models.py  routes.py
src/ai_meta_orchestrator/application/: __init__.py
src/ai_meta_orchestrator/application/services/: orchestrator_service.py
src/ai_meta_orchestrator/domain/: __init__.py
src/ai_meta_orchestrator/domain/agents/: __init__.py  agent_models.py
src/ai_meta_orchestrator/domain/plugins/: __init__.py  plugin_models.py
src/ai_meta_orchestrator/domain/tasks/: __init__.py  task_models.py
src/ai_meta_orchestrator/domain/templates/: __init__.py  template_models.py
src/ai_meta_orchestrator/domain/workflows/: __init__.py  workflow_models.py
src/ai_meta_orchestrator/infrastructure/: __init__.py  config.py  platform.py
src/ai_meta_orchestrator/ports/: __init__.py
src/ai_meta_orchestrator/ports/agent_ports/: __init__.py  agent_port.py
src/ai_meta_orchestrator/ports/external_ports/: external_port.py
src/ai_meta_orchestrator/ports/task_ports/: __init__.py  task_port.py
tests/: conftest.py
tests/unit/: test_adapters.py  test_agent_models.py  test_api.py  test_cli_agents.py  test_config.py  test_persistence.py  test_platform.py  test_plugins.py  test_task_models.py  test_templates.py  test_workflow_models.py
